[Aalekh] ADD: Implemented API for user login along with swagger implementation and rspec testing
