# app/controllers/api/v1/users_controller.rb
@@ -10,11 +10,22 @@ class Api::V1::UsersController < ApplicationController
     end
   end
 
-
+  def login
+    result = UserService.login(login_params)
+    if result[:success]
+      render json: { message: result[:success], token: result[:token] }, status: :ok
+    else
+      render json: { errors: result[:error] }, status: :unprocessable_entity
+    end
+  end
 
   private
 
   def user_params
     params.require(:user).permit(:name, :email, :password, :mobile_number)
+  end
+
+  def login_params
+    params.require(:user).permit(:email, :password)
   end
 end
